my profile page

--- a/index.html
+++ b/index.html
@@ -13,30 +13,31 @@
     <body>
       <div class="card_white">
         <h1>Jeremy Richards</h1>
-        <h2>Fashion Designer👠</h2>
+        <h2>Founder and Creative Director of MALACHI</h2>
 
         <img src="images/profile_pic1.jpg" alt="profile">
 
-        <p>I am all about mens fashion and self-expression.
-        My favourite element to my brand Malachi is interviewing the men I design for
-        and creating profile pieces of them in their new suits.
-        On a side note. I have a rabbit and a cat and my cat is due to birth kittens this week 😻
+        <p>
+       Malachi is a collective that exists to empower men and celebrate their accomplishments through bespoke clothing.
+       Born from the belief that the notion of menswear is often static and outdated,
+       men have been blocked unnecessarily from expressing themselves in the world.
+       Where fashion and self-expression have been restricted for men, a revolution is imminent!
         </p>
 
 
-      <a href="https://www.malachimen.co.uk/"target="_blank"class="btn_gold">Become a Malachi Man</a>
+      <a href="https://www.malachimen.co.uk/"target="_blank"class="btn_gold">Visit the MALACHI website</a>
     </div>
 
     <div class="card_white">
-      <h3>Cats and Rabbits and Rabbits and Cats</h3>
+      <h3>I am all about mens fashion and self-expression.</h3>
     </div>
 
     <div class="card_white">
-      <h2>FOLLOW ME</h2>
+      <h2>Follow MALACHI</h2>
 
       <ul class="list_inline">
-        <li><a href='#'class="social_tags"><i class="fab fa-instagram"></i><a></li>
-        <li><a href='#'class="social_tags"><i class="fab fa-facebook-square"></i><a></li>
+        <li><a href='https://www.instagram.com/malachi.men/'target="_blank"class="social_tags"><i class="fab fa-instagram"></i><a></li>
+        <li><a href='https://www.facebook.com/malachimen/'target="_blank"class="social_tags"><i class="fab fa-facebook-square"></i><a></li>
       </ul>
     </div>
   </body>
